dev/tests/cases/neg/04_fixed_reassign.tv
df main() -> void {
    fixed name: str = "a";
    name = "b";
}
